# databasedykkerne

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.resources.yml  docker-compose.yml  migrate.sh  setup.sh
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
faggruppemøte-april/: intro.md
faggruppemøte-mai/: agenda.md  graveoppgaver.md  intro.md
faggruppemøte-mars/: presentation.md
performance-app/: AGENTS.md  README.md  migrate.sh  pyproject.toml  setup.sh
performance-app/migrations/: 001_create_product_schema.down.sql  001_create_product_schema.up.sql  002_task_a.up.sql
performance-app/solutions/: oppgave-10.md  oppgave-3.md  oppgave-4.md  oppgave-8.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-a.md  task-b.md  task-c.md
performance-app/src/: conftest.py  database.py  seed_database.py  test_oppgave_10.py  test_oppgave_11.py  test_oppgave_13.py  test_oppgave_2.py  test_oppgave_3.py  test_oppgave_4.py  test_oppgave_5.py  test_oppgave_8.py  test_task_1.py  test_task_10.py  test_task_2.py  test_task_3.py  test_task_4.py  test_task_5.py  test_task_6.py  test_task_7.py  test_task_8.py  test_task_9.py  test_task_a.py  test_task_b.py  test_task_c.py
rag-app/: .gitignore  AGENTS.md  README.md  pyproject.toml
solutions/: oppgave-1.md  oppgave-2.md  oppgave-5.md  oppgave-6.md  oppgave-7.md  oppgave-9.md
src/: conftest.py  database.py  seed_utils.py  test_database.py  test_oppgave_1.py  test_oppgave_12.py  test_oppgave_6.py  test_oppgave_7.py  test_oppgave_9.py
(+106 files in other folders)
